// Copyright 2023 Aalyria Technologies, Inc., and its affiliates.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package aalyria.spacetime.github.tools.nbictl;

import "google/protobuf/empty.proto";

option go_package = "aalyria.com/spacetime/github/tools/nbictl/nbictlpb";

message AppConfig {
  repeated Config configs = 1;
}

message Config {
  string name = 1;
  string key_id = 2;
  string email = 3;
  string priv_key = 4;
  string url = 5;

  message TransportSecurity {
    message ServerCertificate {
      string cert_file_path = 1;
    }

    oneof type {
      // Don't use TLS, connect using plain-text HTTP/2.
      google.protobuf.Empty insecure = 1;

      // Use the system certificate pool for TLS.
      google.protobuf.Empty system_cert_pool = 2;

      // Use the provided server certificate for TLS.
      ServerCertificate server_certificate = 3;
    }
  }

  TransportSecurity transport_security = 7;
}
